--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.4.6",
     "react-fast-marquee": "^1.6.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
